Realign top top of main sections after I thought I'd fixed it in the opposite direction

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ html, body {
 }
 
 #content-container {
-  margin-top: 64px;
+  margin-top: 56px;
 }
 
 h2 {
